tests/e2e/testdata/backend-policy-extauth.yaml
apiVersion: agentic.networking.x-k8s.io/v1alpha1
kind: XAccessPolicy
metadata:
  name: e2e-backend-allow-policy
  namespace: e2e-test-ns
spec:
  targetRefs:
    - group: agentic.networking.x-k8s.io
      kind: XBackend
      name: e2e-mcp-backend
  action: Allow
  rules:
    - name: inline-tools-for-tester-sa
      source:
        type: ServiceAccount
        serviceAccount:
          name: e2e-tester-sa
          namespace: e2e-test-ns
      authorization:
        type: Inline
        mcp:
          mcpBaseProtocolMethodsOption: MATCH_BASE_PROTOCOL_METHODS
          methods:
            - name: tools/call
              params:
                - "echo"
                - "get-sum"
    - name: inline-tools-for-tester-2-sa
      source:
        type: ServiceAccount
        serviceAccount:
          name: e2e-tester-2-sa
          namespace: e2e-test-ns
      authorization:
        type: Inline
        mcp:
          mcpBaseProtocolMethodsOption: MATCH_BASE_PROTOCOL_METHODS
          methods:
            - name: tools/call
              params:
                - "echo"
                - "get-sum"
                - "get-env"
---
apiVersion: agentic.networking.x-k8s.io/v1alpha1
kind: XAccessPolicy
metadata:
  name: e2e-backend-extauth-policy
  namespace: e2e-test-ns
spec:
  targetRefs:
    - group: agentic.networking.x-k8s.io
      kind: XBackend
      name: e2e-mcp-backend
  action: ExternalAuth
  externalAuth:
    backendRef:
      kind: Service
      name: authorino
      namespace: e2e-test-ns
      port: 50051
    protocol: GRPC
    grpc: {}
  rules:
    - name: external-auth-for-tester-2-sa
      source:
        type: ServiceAccount
        serviceAccount:
          name: e2e-tester-2-sa
          namespace: e2e-test-ns
